--- a/package.json
+++ b/package.json
@@ -1,19 +1,41 @@
 {
-    "name": "Piper",
-    "version": "0.1.0",
-    "devDependencies": {
-        "grunt": "~0.4.5",
-        "grunt-contrib-clean": "~0.6.0",
-        "grunt-contrib-concat": "~0.5.0",
-        "grunt-contrib-connect": "~0.8.0",
-        "grunt-contrib-copy": "~0.6.0",
-        "grunt-contrib-sass": "~0.8.1",
-        "grunt-contrib-uglify": "~0.6.0",
-        "grunt-contrib-watch": "~0.6.1",
-        "grunt-newer": "~0.7.0",
-        "grunt-svgmin": "~2.0.0",
-        "grunt-zetzer": "~2.0.0-alpha2",
-        "load-grunt-config": "~0.16.0",
-        "node-bourbon": "~1.2.3"
-    }
+  "name": "react-app",
+  "version": "1.0.0",
+  "description": "",
+  "main": "webpack.config.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --content-base app --inline --hot"
+  },
+  "author": "",
+  "license": "",
+  "repository": "",
+  "devDependencies": {
+    "autoprefixer": "^6.5.1",
+    "axios": "^0.15.2",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-react-html-attrs": "^2.0.0",
+    "babel-plugin-transform-class-properties": "^6.3.13",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "flux": "^3.0.0",
+    "import-glob-loader": "^1.1.0",
+    "node-bourbon": "^4.2.8",
+    "node-sass": "^3.10.1",
+    "postcss-loader": "^1.0.0",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "react-router": "^2.8.1",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.1"
+  }
 }
