--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --content-base app --inline --hot"
+    "start": "NODE_ENV=development webpack-dev-server --content-base app --inline --hot",
+    "production": "NODE_ENV=production webpack",
+    "staging": "NODE_ENV=staging webpack"
   },
   "author": "",
   "license": "",
   "repository": "",
-  "devDependencies": {
+  "dependencies": {
     "autoprefixer": "^6.5.1",
-    "axios": "^0.15.2",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
@@ -23,16 +24,20 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "css-loader": "^0.25.0",
+    "devour-client": "^1.4.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "flux": "^3.0.0",
     "import-glob-loader": "^1.1.0",
+    "jwt-decode": "^2.1.0",
     "node-bourbon": "^4.2.8",
     "node-sass": "^3.10.1",
     "postcss-loader": "^1.0.0",
     "react": "^0.14.6",
+    "react-click-outside": "^2.2.0",
     "react-dom": "^0.14.6",
     "react-router": "^2.8.1",
+    "react-select": "^1.0.0-rc.2",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.9",
