--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=development webpack-dev-server --content-base app --inline --hot",
-    "production": "NODE_ENV=production webpack",
-    "staging": "NODE_ENV=staging webpack"
+    "build": "NODE_ENV=production webpack"
   },
   "author": "",
   "license": "",
