--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "NODE_ENV=development webpack-dev-server --content-base app --inline --hot",
-    "start": "NODE_ENV=production webpack"
+    "start": "NODE_ENV=development webpack-dev-server --content-base app --inline --hot",
+    "build": "NODE_ENV=production webpack"
   },
   "author": "",
   "license": "",
