--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "NODE_ENV=development webpack-dev-server --content-base app --inline --hot",
-    "start": "NODE_ENV=production webpack"
+    "build": "NODE_ENV=production webpack",
+    "start": "node app.js"
   },
   "author": "",
   "license": "",
