--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-router": "^2.8.1",
     "react-select": "^1.0.0-rc.2",
     "sass-loader": "^4.0.2",
+    "shopify-buy": "^0.6.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1"
