--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^0.25.0",
     "devour-client": "^1.4.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "fetch-ie8": "^1.4.3",
     "file-loader": "^0.9.0",
     "flux": "^3.0.0",
     "import-glob-loader": "^1.1.0",
