--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "apollo-link-http": "^1.5.7",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
+    "history": "^4.7.2",
     "react": "^16.6.3",
     "react-apollo": "^2.3.1",
     "react-dom": "^16.6.3",
