--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^16.8.2",
     "react-apollo": "^2.3.1",
     "react-dom": "^16.8.2",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "4.4.0-beta.6",
     "react-scripts": "2.1.5",
     "styled-components": "^4.1.3"
   },
